# datafusion-odata

./: CHANGELOG.md  Cargo.toml  deny.toml
.github/workflows/: build.yaml
examples/: simple_service.rs
examples/data/: tickers.parquet
src/: atom.rs  error.rs  filter.rs  handlers.rs  metadata.rs
tests/: shared.rs  test_collection_handler.rs  test_handlers.rs
